# yotagrabber

./: README.md  pyproject.toml  renovate.json
.github/workflows/: update.yml
output/: 4runner.csv  4runner_raw.parquet  86.csv  86_raw.parquet  bz4x.csv  bz4x_raw.parquet  camry.csv  camry_raw.parquet  camryhybrid.csv  camryhybrid_raw.parquet  corolla.csv  corolla_raw.parquet  corollacross.csv  corollacross_raw.parquet  corollacrosshybrid.csv  corollacrosshybrid_raw.parquet  corollahatchback.csv  corollahatchback_raw.parquet  corollahybrid.csv  corollahybrid_raw.parquet  grandhighlander.csv  grandhighlander_raw.parquet  grandhighlanderhybrid.csv  grandhighlanderhybrid_raw.parquet  grcorolla.csv  grcorolla_raw.parquet  highlander.csv  highlander_raw.parquet  highlanderhybrid.csv  highlanderhybrid_raw.parquet  landcruiser.csv  landcruiser_raw.parquet  mirai.csv  mirai_raw.parquet  models.json  models_raw.json  prius.csv  prius_raw.parquet  priusprime.csv  priusprime_raw.parquet  (+22 more)
src/yotagrabber/: config.py  models.py  vehicles.py
src/yotagrabber/graphql/: models.graphql  vehicles.graphql
