[tool.poetry]
name = "yotagrabber"
version = "0.1.0"
description = ""
authors = ["Major Hayden <major@mhtx.net>"]
readme = "README.md"
packages = [{include = "yotagrabber", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
pyarrow = "^13.0.0"
requests = "^2.31.0"
playwright = "^1.37.0"
brotli = "^1.0.9"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ipython = "^8.14.0"
pytest-sugar = "^0.9.7"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pandas-stubs = "^2.0.3.230814"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update_models = 'yotagrabber.models:update_models'
update_vehicles = 'yotagrabber.vehicles:update_vehicles'