[tool.poetry]
name = "yotagrabber"
version = "0.1.0"
description = ""
authors = ["Major Hayden <major@mhtx.net>"]
readme = "README.md"
packages = [{ include = "yotagrabber", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
pandas = "^2.1.1"
pyarrow = "^14.0.0"
requests = "^2.31.0"
playwright = "^1.38.0"
brotli = "^1.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
ipython = "^8.16.1"
pytest-sugar = "^0.9.7"
pytest = "^7.4.2"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pandas-stubs = "^2.1.1.230928"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update_models = 'yotagrabber.models:update_models'
update_vehicles = 'yotagrabber.vehicles:update_vehicles'
